[tool.poetry]
name = "silver-eureka"
version = "0.1.0"
description = ""
authors = ["Jiayu Yi <yijiayu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
jupyter = "^1.0.0"
streamlit = "^1.10.0"
spacy = "^3.3.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
